src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CTIMGI</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cancellation Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Change Details</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Submitted For Approval</fullName>
        </values>
        <values>
            <fullName>Transfer Approved</fullName>
        </values>
        <values>
            <fullName>Transfer Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Commission Tracking</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Business Office Approval</fullName>
        </values>
        <values>
            <fullName>Awaiting Mgmt Approval</fullName>
        </values>
        <values>
            <fullName>Close %E2%80%93 Approved</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted for Appeal</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Loan%2FBursary Request Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Financially_Responsible_Email__c</fullName>
        <description>Used to pull in the Sponsors email to the case so that automated emails can be sent</description>
        <label>Account Financially Responsible Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Sampling Account Number, Socrates ID, Pearson Account Number</description>
        <formula>Account.Sampling_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Primary_Contact_Email__c</fullName>
        <description>Stores the Primary Email or secondary email of Contact on the case so that an automated email can be sent</description>
        <label>Account Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Adjustment_Sub_Type__c</fullName>
        <label>Adjustment Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base Relief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Misalignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crediting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Used to specify if a Students request for a Loan or Bursary has been accepted or rejected</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_amount__c</fullName>
        <description>Used to record amount the Student has been approved for</description>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_by_if_Other__c</fullName>
        <description>If the name of the Approving Institution is not available in the &apos;Approved by&apos; picklist, the user must capture the name of the Approver here</description>
        <label>Approved/Rejected by (if Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_Total__c</fullName>
        <formula>X4Q_Base__c  +  X9M_Base__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bursary_Loan_Status__c</fullName>
        <description>Global:Field to identify if a Student request for a Loan or Bursary has been accepted or rejected</description>
        <label>Bursary/Loan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bursary_Type__c</fullName>
        <description>Global: Field to identify the type of bursary that the student is applying for</description>
        <label>Bursary Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bursary Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursary Type 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursary Type 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Office_Comments__c</fullName>
        <label>Business Office Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <description>Created a New mandatory free text field ‘Case Reason’ . in regard of D-0195.</description>
        <label>Case Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Campus__c</fullName>
        <description>Used to capture where the Student is currently enrolled</description>
        <label>Current Campus</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>​Bedfordview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Total__c</fullName>
        <formula>X4Q_Current__c  +  X9M_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Final_Approved_Dollar_Value__c</fullName>
        <label>Final Approved Dollar Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Approved_Unit_Count__c</fullName>
        <label>Final Approved Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Category__c</fullName>
        <description>Finance Disposition</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>This field represents the Geography associated to the creator of the case</description>
        <formula>TEXT(CreatedBy.Geography__c)</formula>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <inlineHelpText>For multiple ISBNs, separate with a comma</inlineHelpText>
        <label>ISBN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <description>Used on Loan/Bursary requests to identify the Institution that has approved the Students Loan/Bursary.</description>
        <label>Approved/Rejected By</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>ABSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pearson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>This fields return the Line of Business of the Case creator</description>
        <formula>TEXT(CreatedBy.Line_of_Business__c)</formula>
        <label>Line_of_Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Refund_Required__c</fullName>
        <description>Used to record if a student wants a Loan</description>
        <label>Loan Refund Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Required__c</fullName>
        <description>Used to record if a student wants a Loan</description>
        <inlineHelpText>Used to record if a student wants a Loan</inlineHelpText>
        <label>Loan Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_amount__c</fullName>
        <description>Global: Field to identify the value amount of the Loan that the Student has been awarded</description>
        <label>Loan amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market2__c</fullName>
        <label>Market2</label>
        <picklist>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Used to tag the case record with the market of the creator</description>
        <formula>TEXT(CreatedBy.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to record whether the case relates to an Opportunity</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pearson_Account_Number__c</fullName>
        <description>Pearson account Number from the related Account</description>
        <formula>Account.Pearson_Account_Number__c</formula>
        <label>Pearson Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Enrolment__c</fullName>
        <description>Used to record whether the student has already enrolled for the term in which the Transfer will occur.</description>
        <inlineHelpText>Select &apos;Yes&apos; If the student has already enrolled for the term in which the Transfer will occur.</inlineHelpText>
        <label>Post Enrolment</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferences__c</fullName>
        <description>Used to record the Students accommodation preference</description>
        <label>Preferences</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>On Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Campus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product information for Financial Workflow</description>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_in_Use_Campus__c</fullName>
        <formula>TEXT(Asset.Campus__c)</formula>
        <label>Product in Use Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_in_Use__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to tie a case to an  assets ( &apos;Products in Use&apos;) . Filtered to show only &apos;qualification&apos; levels assets, with a status=active
&lt;TODO&gt; Create a proper solution to only display qualifications. The filter criteria that uses campus &lt;&gt; &apos; &apos; was a workaround</description>
        <label>Products in Use</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <errorMessage>No Products In Use available for the Associated Account or the Associated Accounts &apos;Product in Use&apos; are not Active.</errorMessage>
            <filterItems>
                <field>Asset.Status</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Asset.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Asset.Campus__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Campus__c</fullName>
        <description>Used to record the Campus the student wants to move to</description>
        <label>Proposed Campus</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>​Bedfordview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_if_Other__c</fullName>
        <description>Used to capture the case reason if  Reason picklist field has been set to &apos;Other&apos;</description>
        <label>Reason if &apos;Other&apos;</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Finance_Workflow_Cases__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows related finance workflow cases</description>
        <inlineHelpText>Please select another Finance Workflow case</inlineHelpText>
        <label>Related Case</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select other finance workflow cases as a related case</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Finance Workflow</value>
            </filterItems>
            <infoMessage>Please select another finance workflow case as a related case.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Finance Workflow Case</relationshipLabel>
        <relationshipName>Related_Finance_Workflow_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Sub_Type__c</fullName>
        <description>Field to define the type of request (dependent on Type)</description>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Initial Accommodation request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Existing Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course does not meet expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to keep up with course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Dollar_Value__c</fullName>
        <inlineHelpText>Associated dollar value of the commission adjustment request</inlineHelpText>
        <label>Requested Dollar Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Unit_Count__c</fullName>
        <inlineHelpText>Associated unit count of the commission adjustment request (whole units)</inlineHelpText>
        <label>Requested Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returning_Tablet__c</fullName>
        <description>Used to record if the Student has returned their tablet on submission of a cancellation request</description>
        <label>Tablet Returned</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to record the Contact that is financially responsible for the Student</description>
        <inlineHelpText>Populate the name of the Contact who is financially responsible for the student</inlineHelpText>
        <label>Sponsor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Need information from Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting additional activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending year-end review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <picklistValues>
                <fullName>BN.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coursesmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follett eBooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XanEdu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chegg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rittenhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tablet_Unique_Number__c</fullName>
        <description>Used to record the Track &amp; Trace ID of the Tablet</description>
        <label>Tablet Unique Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <label>Time Period</label>
        <picklist>
            <picklistValues>
                <fullName>4Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4Q_Base__c</fullName>
        <label>4Q Base</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4Q_Current__c</fullName>
        <label>4Q Current</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X9M_Base__c</fullName>
        <label>9M Base</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X9M_Current__c</fullName>
        <label>9M Current</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Adjustment_Requests</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Adjustment_Type__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Finance_Workflow</value>
        </filters>
        <label>All Adjustment Requests</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Business_Office_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Business Office</label>
        <queue>Business_Office</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Accommodation_Requests_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CTIMGI Accommodation Requests</label>
        <queue>CTIMGI_Accommodation_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Accounts_to_be_Reassigned_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <filterScope>Queue</filterScope>
        <label>CTIMGI Accounts to be Reassigned</label>
        <language>en_US</language>
        <queue>CTIMGI_Accounts_to_be_Reassigned</queue>
        <sharedTo>
            <roleAndSubordinates>CTIMGI</roleAndSubordinates>
            <roleAndSubordinates>President_Core_Markets</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CTIMGI_Bedfordview_Campus_Transfer_App_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CTIMGI Bedfordview_Campus Transfers</label>
        <language>en_US</language>
        <queue>CTIMGI_Bedfordview_Campus_Transfer_App</queue>
        <sharedTo>
            <group>CTIMGI_Bedfordview_Campus_Transfer</group>
            <role>CTIMGI_Bedfordview_Student_Advisor</role>
        </sharedTo>
    </listViews>
</CustomObject>